test: feat/rafansya test coverage 90% - branch 80%